// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Runtime wrap generates the correct args for the module wrapper 1`] = `
({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,global,jest){module.exports = "Hello!"
}});
`;

exports[`Runtime wrap injects "extra globals" 1`] = `
({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,global,jest,Math){module.exports = "Hello!"
}});
`;
